k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myappcontainer-deployment
  labels:
    app: myappcontainer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myappcontainer
  template:
    metadata:
      labels:
        app: myappcontainer
    spec:
      containers:
      - name: myappcontainer
        image: nucleoacr.azurecr.io/myappcontainer:latest
